feat: updated to asciidoctorj 2.4.2